Make HR optional on Watch App
(cherry picked from commit d179f6c01d9b3e4bf973830ed6dcfb23f83903e1)

--- a/FreeAPS/Resources/json/defaults/freeaps/freeaps_settings.json
+++ b/FreeAPS/Resources/json/defaults/freeaps/freeaps_settings.json
@@ -7,8 +7,9 @@
     "useLocalGlucoseSource": false,
     "localGlucosePort": 8080,
     "debugOptions": false,
-    "insulinReqFraction": 0.7,
+    "insulinReqFraction": 2.0,
     "skipBolusScreenAfterCarbs": false,
+    "displayHR": false,
     "cgm": "nightscout",
     "uploadGlucose": false,
     "glucoseBadge": false,
